working simple version of rmi protocol between Peer and TestApp